Manoy-To-Many with extra data